Beta released! so excited
Uploaded the beta to the website

--- a/download/index.html
+++ b/download/index.html
@@ -24,7 +24,8 @@
         <section>
             <h2>Available Downloads</h2>
             <p>Here you can find all the available downloads for Wings of Nexus.</p>
-            <h2>whoops! the game is not actually released yet!</h2>
+            <hr>
+            <a href="/files/downloads/WingsOfNexus.exe">Download Wings of Nexus Beta (Windows)</a>
         </section>
     </main>
     <footer>
