--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <p>Enjoy a focused experience designed for quick play sessions.</p>
         </div>
     </section>
+    <section class="hero">
+        <h2>This game is in BETA!!!</h2>
+        <p>It like just got released so dont judge please</p>
+    </section>
     <footer>
         <p>not copyrighted but pls dont mess with it</p>
     </footer>
