--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>Wings of Nexus</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="download/index.html">Download</a>
+            <a href="">Home</a>
+            <a href="download/">Download</a>
         </nav>
     </header>
     <section class="hero">
