--- a/download/index.html
+++ b/download/index.html
@@ -16,7 +16,7 @@
         <h1>Wings of Nexus - Downloads</h1>
         <nav>
             <ul>
-                <a href="../index.html">Home</a></li>
+                <a href="../">Home</a></li>
             </ul>
         </nav>
     </header>
