--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <section class="hero">
         <h2>This game is in BETA!!!</h2>
         <p>It like just got released so dont judge please</p>
+        <hr>
+        <h2>Notes</h2>
+        <p>This game does not have keyboard+mouse support, you can only really move up and down and to the sides but no shooting.</p>
+        <p>I know it's wierd, but I'm the website guy, not the dev.</p>
+        <p>I don't know if it supports other controllers like Nintendo or Playstation controllers but I do know it supports Xbox controllers.</p>
+        <p>Controllers only.</p>
     </section>
     <footer>
         <p>not copyrighted but pls dont mess with it</p>
