Hopefully fixed the download button

--- a/download/index.html
+++ b/download/index.html
@@ -25,7 +25,7 @@
             <h2>Available Downloads</h2>
             <p>Here you can find all the available downloads for Wings of Nexus.</p>
             <hr>
-            <a href="/files/downloads/WingsOfNexus.exe">Download Wings of Nexus Beta (Windows)</a>
+            <a href="../files/downloads/WingsOfNexus.exe" download>Download Wings of Nexus Beta (Windows)</a>
         </section>
     </main>
     <footer>
