Made a flashy download button

--- a/download/index.html
+++ b/download/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Downloads - Wings of Nexus</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             text-align: center;
@@ -25,7 +25,26 @@
             <h2>Available Downloads</h2>
             <p>Here you can find all the available downloads for Wings of Nexus.</p>
             <hr>
-            <a href="../files/downloads/WingsOfNexus.exe" download>Download Wings of Nexus Beta (Windows)</a>
+            <!-- From Uiverse.io by Creatlydev --> 
+            <a href="../files/downloads/WingsOfNexus.exe" download class="button" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 20px; text-decoration: none; background-color: #007BFF; color: white; border-radius: 5px; width: auto;">
+                <svg
+                    stroke-linejoin="round"
+                    stroke-linecap="round"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    viewBox="0 0 24 24"
+                    height="40"
+                    width="40"
+                    class="button__icon"
+                >
+                    <path fill="none" d="M0 0h24v24H0z" stroke="none"></path>
+                    <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path>
+                    <path d="M7 11l5 5l5 -5"></path>
+                    <path d="M12 4l0 12"></path>
+                </svg>
+                <span class="button__text" style="margin-left: 10px;">Download Beta (Windows)</span>
+            </a>
         </section>
     </main>
     <footer>
