--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p>I know it's wierd, but I'm the website guy, not the dev.</p>
         <p>I don't know if it supports other controllers like Nintendo or Playstation controllers but I do know it supports Xbox controllers.</p>
         <p>Controllers only.</p>
+        <h2>The game is ONLY OUT FOR WINDOWS SO FAR</h2>
     </section>
     <footer>
         <p>not copyrighted but pls dont mess with it</p>
