Added 404 page and notes on controller support

--- a/index.html
+++ b/index.html
@@ -39,9 +39,18 @@
         <h2>Notes</h2>
         <p>This game does not have keyboard+mouse support, you can only really move up and down and to the sides but no shooting.</p>
         <p>I know it's wierd, but I'm the website guy, not the dev.</p>
-        <p>I don't know if it supports other controllers like Nintendo or Playstation controllers but I do know it supports Xbox controllers.</p>
-        <p>Controllers only.</p>
+        <p>Currently the game is really wierd with keyboard, so use a controller.</p>
         <h2>The game is ONLY OUT FOR WINDOWS SO FAR</h2>
+        <hr>
+        <h2>Controller Support Guide</h2>
+        <p>Xbox: Perfect support</p>
+        <p>Playstation: Mostly playable</p>
+        <p>Nintendo Switch: Untested</p>
+        <hr>
+        <h2>More notes on Playstation controllers</h2>
+        <p>At the moment, Playstation controllers are not great</p>
+        <p>When it says to click start, it's to click the left or right joystick. I don't know which one.</p>
+        <p>You cannot switch weapons unless you are collecting one.</p>
     </section>
     <footer>
         <p>not copyrighted but pls dont mess with it</p>
