--- a/404.html
+++ b/404.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Wings of Nexus - 404</h1>
+        <nav>
+            <a href="">Home</a>
+            <a href="download/">Download</a>
+            <a href="contact/">Contact</a>
+        </nav>
+    </header>
     <div class="container">
         <h1>404</h1>
         <p>That page is either deleted or has never existed in the first place.</p>
