--- a/download/index.html
+++ b/download/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header>
-        <h1>Wings of Nexus - Downloads</h1>
+        <h1>Wings of Nexus - Download</h1>
         <nav>
-            <ul>
-                <a href="../">Home</a></li>
-            </ul>
+            <a href="../">Home</a>
+            <a href="">Download</a>
+            <a href="../contact/">Contact</a>
         </nav>
     </header>
     <main>
