--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
     </header>
 
     <section class="hero">
-        <h2>Go through the space of Wings of Nexus</h2>
-        <p>Take on the challenge of a singleplayer adventure with competitive leaderboards.</p>
+        <h2>Play Wings of Nexus</h2>
+        <p>Engage in a single-player challenge with competitive leaderboards.</p>
     </section>
 
     <section id="features" class="features">
         <div class="feature">
-            <h3>Challenging Gameplay</h3>
-            <p>Test your skills in a straightforward but fun 2D world.</p>
+            <h3>Engaging Gameplay</h3>
+            <p>Test your skills in a straightforward and enjoyable 2D environment.</p>
         </div>
         <div class="feature">
             <h3>Competitive Leaderboards</h3>
-            <p>Climb the ranks and prove you're the best among players worldwide.</p>
+            <p>Climb the ranks and see how you compare with players worldwide.</p>
         </div>
         <div class="feature">
             <h3>Simple and Fun</h3>
-            <p>Enjoy a focused experience designed for quick play sessions.</p>
+            <p>Enjoy a gameplay experience designed for short, satisfying sessions.</p>
         </div>
     </section>
 
     <section class="hero">
-        <h2>This game is in BETA!!!</h2>
-        <p>It like just got released so dont judge please</p>
+        <h2>Currently in BETA</h2>
+        <p>This is an early release version; please provide constructive feedback.</p>
         <section class="patch-container">
         <!-- From Uiverse.io by arthur_6104 | Modified by Liam -->
         <a href="https://gist.github.com/RoastedGoat" target="_blank" style="text-decoration: none;">
@@ -52,32 +52,25 @@
                 </svg>
             </div>
             <div class="patch-cube">
-                <span class="patch-side patch-front">view patch notes</span>
-                <span class="patch-side patch-top">on github</span>
+                <span class="patch-side patch-front">View Patch Notes</span>
+                <span class="patch-side patch-top">On GitHub</span>
             </div>
             </div>
         </a>
         </section>
         <hr>
-        <h2>Notes</h2>
-        <p>This game does not have keyboard+mouse support, you can only really move up and down and to the sides but no shooting.</p>
-        <p>I know it's wierd, but I'm the website guy, not the dev.</p>
-        <p>Currently the game is really wierd with keyboard, so use a controller.</p>
-        <h2>The game is ONLY OUT FOR WINDOWS SO FAR</h2>
+        <h2>Important Notes</h2>
+        <p>The game now supports both keyboard & mouse and controllers. Movement and interactions are fully functional with either input method.</p>
+        <h2>Windows Version Only</h2>
+        <p>The game is currently available only for Windows.</p>
         <hr>
-        <h2>Controller Support Guide</h2>
-        <p>Xbox: Perfect support</p>
-        <p>Playstation: Mostly playable</p>
-        <p>Nintendo Switch: Untested</p>
-        <hr>
-        <h2>More notes on Playstation controllers</h2>
-        <p>At the moment, Playstation controllers are not great</p>
-        <p>When it says to click start, it's to click the left or right joystick. I don't know which one.</p>
-        <p>You cannot switch weapons unless you are collecting one.</p>
+        <h2>Controller Support</h2>
+        <p>Xbox: Fully supported</p>
+        <p>PlayStation & Nintendo Switch: Can be used with DS4Windows. Download DS4Windows <a href="https://github.com/Ryochan7/DS4Windows/releases" target="_blank">here</a>.</p>
     </section>
 
     <footer>
-        <p>not copyrighted but pls dont mess with it</p>
+        <p>Uncopyrighted — please respect the content.</p>
     </footer>
 
     <style>
