--- a/download/index.html
+++ b/download/index.html
@@ -22,6 +22,7 @@
         <select id="version-select">
             <option value="../files/downloads/WingsOfNexus.exe">Legacy Version</option>
             <option value="../files/downloads/WingsOfNexusV2.exe">Version 2</option>
+            <option value="../files/downloads/WingsOfNexusV3.exe">Version 3</option>
             <!-- Add more versions as needed -->
         </select>
         <a id="download-button" href="download/legacy/" class="button">
