Made colors more modern and fixed footer issues

--- a/404.html
+++ b/404.html
@@ -23,5 +23,9 @@
         </a>
 
     </div>
+
+    <footer>
+        <p>Uncopyrighted — please respect the content.</p>
+    </footer>
 </body>
 </html>
