--- a/contact/index.html
+++ b/contact/index.html
@@ -35,5 +35,9 @@
             <button type="submit" class="submit-button">Send Feedback</button>
         </form>
     </div>
+
+    <footer>
+        <p>Uncopyrighted — please respect the content.</p>
+    </footer>
 </body>
 </html>
