fixed download header

--- a/download/index.html
+++ b/download/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Wings of Nexus</h1>
+        <h1>Wings of Nexus - Download</h1>
         <nav>
             <a href="../">Home</a>
             <a href="">Download</a>
