hopefully working light/dark mode switch

--- a/contact/index.html
+++ b/contact/index.html
@@ -39,5 +39,6 @@
     <footer>
         <p>Uncopyrighted — please respect the content.</p>
     </footer>
+    <script src="../theme-toggle.js"></script>
 </body>
 </html>
