--- a/download/index.html
+++ b/download/index.html
@@ -44,5 +44,6 @@
             button.textContent = 'Download ' + selectedOption.text;
         });
     </script>
+    <script src="../theme-toggle.js"></script>
 </body>
 </html>
