--- a/index.html
+++ b/index.html
@@ -138,5 +138,6 @@
         transform: translate3d(0, 0, 1em);
       }
     </style>
+    <script src="theme-toggle.js"></script>
 </body>
 </html>
