--- a/404.html
+++ b/404.html
@@ -27,5 +27,6 @@
     <footer>
         <p>Uncopyrighted — please respect the content.</p>
     </footer>
+    <script src="theme-toggle.js"></script>
 </body>
 </html>
