--- a/download/index.html
+++ b/download/index.html
@@ -24,6 +24,8 @@
             <option value="../files/downloads/WingsOfNexus.exe">Legacy Version</option>
             <option value="../files/downloads/WingsOfNexusV2.exe">Version 2</option>
             <option value="../files/downloads/WingsOfNexusV3.exe">Version 3</option>
+            <option value="../files/downloads/WingsOfNexusV4.exe">Version 4</option>
+            <option value="../files/downloads/WingsOfNexusV5.exe">Version 5</option>
             <!-- Add more versions as needed -->
         </select>
         <a id="download-button" href="download/legacy/" class="button">
